# exec_path_args

./: .gitignore  CMakeLists.txt  README.md
include/exec_path_args/: exec_path_args.hxx  native_fd_t.hxx  pipe_helper.hxx  process_handle_t.hxx
scripts/: build.bash  compile.bash  configure.bash  purge.bash  unit_tests.bash
src/: exec_path_args.cxx  pipe_helper.cxx  syscall_helper.cxx
src/include/impl/: syscall_helper.hxx
tests/unit/: CMakeLists.txt  doctest_main.cxx
tests/unit/cases/: exec_path_args.test.cxx
tests/unit/common/ips/: CMakeLists.txt
tests/unit/common/ips/include/ips/: ips.hxx
tests/unit/common/ips/src/: ips.cxx
tests/unit/helper/: some_cli_app.cxx
